--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ p {
     transform: scale(1); } }
 /********Body Sec CSS********/
 .fixed-bg {
-  background: transparent url("../img/smoke.png") no-repeat;
+  background: transparent url(" maxmcshanecv.github.io/img/Smoke.png ") no-repeat;
   image-rendering: optimizeQuality;
   height: 100%;
   width: 100%;
